--- a/src/app/components/products-table/products-table.component.html
+++ b/src/app/components/products-table/products-table.component.html
@@ -1,30 +1,30 @@
-<div class="products-table-wrapper relative">
-  <app-loading-spinner [show]="isLoading" diameter="100"  />
+<div class="products-table relative">
+  <app-loading-spinner [show]="isLoading" diameter="100" />
 
   <mat-table recycleRows [dataSource]="dataSource" [trackBy]="trackProduct" class="mat-elevation-z8">
     <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef> Name</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.name }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="brand">
-      <mat-header-cell *matHeaderCellDef> Brand </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.brand}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef> Brand</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.brand }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="category">
-      <mat-header-cell *matHeaderCellDef> Category </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.category}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef> Category</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.category }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="price">
-      <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.price}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef> Price</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.price }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="quantity">
-      <mat-header-cell *matHeaderCellDef> Quantity </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.quantity}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef> Quantity</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.quantity }}</mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -34,5 +34,4 @@
     [pageSizeOptions]="[10, 20, 50, 100]"
     pageSize="50"
   />
-
 </div>
