--- a/src/app/styles/styles.scss
+++ b/src/app/styles/styles.scss
@@ -1,8 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
 @use "variables";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@include mat.input-density(-5);
+@include mat.private-form-field-density(-3);
 
 .relative {
   position: relative;
