--- a/src/app/components/products-table/products-table-filters/products-table-filters.component.html
+++ b/src/app/components/products-table/products-table-filters/products-table-filters.component.html
@@ -6,6 +6,7 @@
   <mat-form-field class="field">
     <mat-label>Category</mat-label>
     <mat-select formControlName="category">
+      <mat-option [value]="null">No option</mat-option>
       @for (category of categories;track category) {
         <mat-option [value]="category">{{ category }}</mat-option>
       }
